examples/test/testpolicy5117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5117
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key7: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value5
          key37: value5
      podSelector:
        matchLabels:
          key19: value11
          key31: value40
